[package]
name = "api_server"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = "0.8.7"
futures = "0.3.31"
futures-signals = "0.3.34"
rand = "0.10.0-rc.5"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
