[package]
name = "api_server"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = "0.8.8"
futures = "0.3.31"
futures-signals = "0.3.34"
rand = "0.10.0-rc.6"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
