[package]
name = "{{name}}"
version = "0.1.0"
edition = "2021"
rust-version = "1.66"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "{{name}}"

[features]
typegen = ["crux_core/typegen"]

[dependencies]
crux_core = "0.6"
crux_macros = "0.3"
serde = { workspace = true, features = ["derive"] }
lazy_static = "1.4.0"
uniffi = "0.24.2"
wasm-bindgen = "0.2.87"

[target.uniffi-bindgen.dependencies]
uniffi = { version = "0.24.2", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.24.2", features = ["build"] }
