[package]
name = "cli"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow.workspace = true
tokio = { version = "1.37", features = ["full"] }
async-task-group = "0.2.1"
crossbeam-channel = "0.5.12"
futures = "0.3"
serde = { workspace = true, features = ["derive"] }
shared = { path = "../shared" }
surf = "2.3.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
