[package]
name = "shared"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "codegen"
required-features = ["cli"]

[features]
cli = ["crux_core/cli", "dep:log", "dep:pretty_env_logger"]
facet_typegen = ["crux_core/facet_typegen"]

[dependencies]
crux_core.workspace = true
facet = { version = "0.30.0", features = ["chrono", "time"] }
log = { version = "0.4.28", optional = true }
pretty_env_logger = { version = "0.5.0", optional = true }
serde = { workspace = true, features = ["derive"] }

# not wasm
[target.'cfg(not(target_family = "wasm"))'.dependencies]
rand = { version = "0.9.2", features = ["os_rng"] }
uniffi = "=0.29.4"

# wasm
[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }
wasm-bindgen = "0.2.105"
js-sys = "0.3.82"
