[package]
name = "shared"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "codegen"
required-features = ["codegen"]

[features]
uniffi = ["dep:uniffi"]
wasm_bindgen = ["dep:wasm-bindgen"]
codegen = [
    "crux_core/cli",
    "dep:clap",
    "dep:log",
    "dep:pretty_env_logger",
    "dep:uniffi",
]
facet_typegen = ["crux_core/facet_typegen"]

[dependencies]
crux_core.workspace = true
facet = { version = "=0.30", features = ["chrono", "time"] }
log = { version = "0.4.28", optional = true }
pretty_env_logger = { version = "0.5.0", optional = true }
serde = { workspace = true, features = ["derive"] }
uniffi = { version = "=0.29.4", optional = true }
wasm-bindgen = { version = "0.2.105", optional = true }
clap = { version = "4.5.51", optional = true, features = ["derive"] }

# not wasm
[target.'cfg(not(target_family = "wasm"))'.dependencies]
rand = { version = "0.9.2", features = ["os_rng"] }

# wasm
[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }
